<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My lists</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_login">Enter user credentials</string>
    <string name="et_user_hint">Username</string>
    <string name="et_pass_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_register">New user?</string>
    <string name="btn_reg">Register</string>
    <string name="btn_about">About us</string>
    <string name="btn_exit">Exit</string>
    <string name="registration_field">Enter user credentials</string>
    <string name="register_user_hint">Username</string>
    <string name="register_pass_hint">Password</string>
    <string name="register_pass_hint2">Reenter password</string>
    <string name="register">Register</string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>

    <string name="app_subtitle">Structured collaboration</string>
    <string name="title_chat_list">My conversations</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_close">Close</string>

    <string name="tv_login">Type in your credentials here:</string>
    <string name="tv_register">If you haven\'t yet registered, you can create one here</string>

    <string name="et_user_hint">Username</string>
    <string name="et_pass_hint">Password</string>

    <string name="btn_login">Login</string>
    <string name="btn_reg">Register new user</string>
    <string name="btn_about">About this app</string>
    <string name="btn_back">Go back</string>
    <string name="btn_exit">Exit</string>

    <string name="about_text">This app is my first assignment within the course:
        Application Development for Android. It consists of 5 fragments and 2 activities.
        The activities use the fragment manager to change between the different fragments.</string>
    <string name="about_developer">Developer:</string>
    <string name="about_info">App info:</string>
    <string name="about_developer_name">Saeed Mir Ghasemi</string>
    <string name="settings_msg">Settings selected but currently not available</string>

    <string name="register_user_hint">Type your desired username</string>
    <string name="register_pass_hint">Type your desired pass</string>
    <string name="register_pass_hint2">Repeat your password</string>
    <string name="registration_field">Register new user:</string>
    <string name="register">Submit new user</string>

    <string name="login_success">You have been logged in</string>
    <string name="registration_success">You have been successfully registered. Attempting to login...</string>

    <string name="Group">Group: </string>

    <string name="about_version">Version 0.1</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_addNewGroup">Add new group</string>
    <string name="menu_item_removeSelectedGroup">Remove selected group</string>
    <string name="dialog_std_message">Type a name for the new group</string>
    <string name="dialog_group_exists_message">That group already existed. Type a different name for the group</string>
    <string name="toast_group_already_exists">"That group already existed"</string>


</resources>
