<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".Assignment1$PlaceholderFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".Assignment1$PlaceholderFragment">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="left|center_vertical"
            android:text="@string/about_text"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:paddingBottom="20sp"
            android:text="@string/about_developer_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_about_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/gray"
            android:paddingLeft="50sp"
            android:paddingRight="50sp"
            android:text="@string/btn_back" />


</LinearLayout>
</ScrollView>